add authors controller and routes
