# routes/index.js
@@ -2,5 +2,6 @@ const express = require('express');
 const router = express.Router();
 
 router.use('/books', require('./books'));
+router.use('/authors', require('./authors'));
 
 module.exports = router;
